<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20px"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etxtNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ejmContenido"
        android:layout_marginBottom="45px"
        />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45px"
        android:text="@string/NotaTitulo"
        />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInsertar"
        />

</LinearLayout>